apollo-router/src/query_planner/snapshots/apollo_router__query_planner__query_planner_service__tests__empty_query_plan_usage_reporting.snap
---
source: apollo-router/src/query_planner/query_planner_service.rs
expression: usage_reporting
---
{
  "operationName": null,
  "operationSignature": "{__schema{queryType{name}}}",
  "errorKey": null,
  "pqId": null,
  "referencedFieldsByType": {
    "Query": {
      "fieldNames": [
        "__schema"
      ],
      "isInterface": false
    },
    "__Schema": {
      "fieldNames": [
        "queryType"
      ],
      "isInterface": false
    },
    "__Type": {
      "fieldNames": [
        "name"
      ],
      "isInterface": false
    }
  }
}
