apollo-router/src/query_planner/snapshots/apollo_router__query_planner__query_planner_service__tests__plan_invalid_query_errors.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: errors
---
PlanErrors {
    errors: [
        PlanError {
            message: Some(
                "Fragment \"UnusedTestFragment\" is never used.",
            ),
            extensions: Some(
                PlanErrorExtensions {
                    code: "GRAPHQL_VALIDATION_FAILED",
                    exception: None,
                },
            ),
            validation_error: true,
        },
    ],
    usage_reporting: UsageReporting {
        stats_report_key: "## GraphQLValidationFailure\n",
        referenced_fields_by_type: {},
    },
}
