apollo-router/src/query_planner/snapshots/apollo_router__query_planner__query_planner_service__tests__plan_root.snap
---
source: apollo-router/src/query_planner/query_planner_service.rs
expression: "plan.root.as_deref().expect(\"non-empty plan\")"
---
Fetch(
    FetchNode {
        service_name: "accounts",
        requires: [],
        variable_usages: [],
        operation: "{ me { name { first last } } }",
        operation_name: None,
        operation_kind: Query,
        id: None,
        input_rewrites: None,
        output_rewrites: None,
        context_rewrites: None,
        schema_aware_hash: QueryHash(
            "2216b9adcba62b2fc2a54e30fa477bda19c79be484b505a25a84e6517fc6a653",
        ),
        authorization: CacheKeyMetadata {
            is_authenticated: false,
            scopes: [],
            policies: [],
        },
        entity_lookup: None,
    },
)
