apollo-router/src/query_planner/snapshots/apollo_router__query_planner__query_planner_service__tests__plan_usage_reporting.snap
---
source: apollo-router/src/query_planner/query_planner_service.rs
expression: plan.usage_reporting
---
{
  "operationName": null,
  "operationSignature": "{me{name{first last}}}",
  "errorKey": null,
  "pqId": null,
  "referencedFieldsByType": {
    "Name": {
      "fieldNames": [
        "first",
        "last"
      ],
      "isInterface": false
    },
    "Query": {
      "fieldNames": [
        "me"
      ],
      "isInterface": false
    },
    "User": {
      "fieldNames": [
        "name"
      ],
      "isInterface": false
    }
  }
}
