apollo-router/src/query_planner/snapshots/apollo_router__query_planner__query_planner_service__tests__subselections.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(\"query Q { me { username name { first last }}}\").await"
---

